feat: implement full-stack user management, task organization features, and role-based access control